# Bachelorarbeit

./: README.md  bachelorarbeit.py  pyproject.toml
data/: Grafik_Verbesserung.xlsx  WillowNLtoFol_Dataset.xlsx  goldstandard.xlsx  malls_both_negated.xlsx  malls_cleaned.xlsx  malls_cleaned_both_negated.xlsx  malls_cleaned_neither_nor.xlsx  malls_cleaned_overgeneralization.xlsx  malls_cleaned_wrong_binding.xlsx  malls_cleaned_xor.xlsx  malls_neither_nor.xlsx  malls_overgeneralization.xlsx  malls_wrong_binding.xlsx  malls_xor.xlsx  test.xlsx  test_cleaned.xlsx  test_small.xlsx  willow_biconditional.xlsx  willow_both_negated.xlsx  willow_cleaned.xlsx  willow_cleaned_both_negated.xlsx  willow_cleaned_neither_nor.xlsx  willow_cleaned_overgeneralization.xlsx  willow_cleaned_wrong_binding.xlsx  willow_neither_nor.xlsx  willow_overgeneralization.xlsx  willow_wrong_binding.xlsx  willow_xor.xlsx
